# graph_canon

./: .drone.jsonnet  .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.rst  Dockerfile  GraphCanonConfig.cmake  README.rst  bootstrap.sh  changes.html  config.hpp.in  configure.ac  genindex.html  index.html  installation.html  jla_build.sh  objects.inv  search.html  searchindex.js  testJLA.sh
NB_graph_canon/: build.sh  clean.sh  preBuild.sh
NB_graph_canon/nbproject/: configurations.xml  project.xml
_sources/: index.rst.txt  installation.rst.txt
_sources/examples/: find_automorphisms.rst.txt  find_canon_form.rst.txt
_sources/executables/: dimacs.rst.txt  graph_canon.rst.txt  index.rst.txt
_sources/reference/: canonicalization.rst.txt  compare.rst.txt  config.rst.txt  index.rst.txt  ordered_graph.rst.txt  shorthands.rst.txt  sorting_utils.rst.txt  tagged_list.rst.txt  util.rst.txt
_sources/reference/aut/: implicit_size_2.rst.txt  index.rst.txt  pruner_base.rst.txt  pruner_basic.rst.txt  pruner_schreier.rst.txt
_sources/reference/edge_handler/: all_equal.rst.txt  edge_handler.rst.txt
_sources/reference/invariant/: coordinator.rst.txt  index.rst.txt  quotient.rst.txt
_sources/reference/refine/: WL_1.rst.txt  degree_1.rst.txt
_sources/reference/target_cell/: f.rst.txt  fl.rst.txt  flm.rst.txt  flmcr.rst.txt  index.rst.txt
_sources/reference/tree_traversal/: bfs-exp-m.rst.txt  bfs-exp.rst.txt  dfs.rst.txt  index.rst.txt
_sources/reference/visitor/: debug.rst.txt  stats.rst.txt  visitor.rst.txt
_static/: basic.css  documentation_options.js
cmake/: FindBoost.cmake
doc/: CMakeLists.txt  Makefile.am_suffix  makeDocs.sh
doc/source/: conf.py  installation.rst
doc/source/examples/: debug_and_stats.rst
doc/source/extensions/cpp_concepts/: __init__.py
docs/v0.5/: installation.html  objects.inv  search.html
docs/v0.5/_sources/: index.rst.txt
docs/v0.5/_sources/examples/: check_isomorphism.rst.txt  index.rst.txt  vertex_labels.rst.txt
docs/v0.5/_sources/executables/: download_graph_collections.rst.txt  graph_canon.rst.txt  graph_canon_bliss.rst.txt  graph_canon_dreadnaut.rst.txt  graph_canon_run.rst.txt  index.rst.txt
docs/v0.5/_sources/reference/: dimacs_graph_io.rst.txt  ordered_graph.rst.txt  sorting_utils.rst.txt  tagged_list.rst.txt
docs/v0.5/_sources/reference/aut/: perm_moved_points.rst.txt  pruner_base.rst.txt  pruner_basic.rst.txt  pruner_schreier.rst.txt
docs/v0.5/_sources/reference/edge_handler/: index.rst.txt
docs/v0.5/_sources/reference/invariant/: cell_split.rst.txt  partial_leaf.rst.txt
docs/v0.5/_sources/reference/refine/: index.rst.txt  refine.rst.txt
docs/v0.5/examples/: debug_and_stats.html  find_automorphism.html  find_automorphisms.html  index.html
docs/v0.5/executables/: download_graph_collections.html  graph_canon_bliss.html  graph_canon_dreadnaut.html  index.html
docs/v0.5/reference/: index.html  ordered_graph.html  sorting_utils.html
docs/v0.5/reference/aut/: pruner_base.html  pruner_basic.html  pruner_schreier.html
docs/v0.5/reference/edge_handler/: index.html
docs/v0.5/reference/invariant/: cell_split.html  index.html  partial_leaf.html
docs/v0.5/reference/refine/: WL_1.html  degree_1.html  refine.html
docs/v0.5/reference/target_cell/: index.html
docs/v0.5/reference/tree_traversal/: bfs-exp-m.html  dfs.html  index.html
docs/v0.5/reference/visitor/: debug.html  index.html  stats.html  visitor.html
examples/: CMakeLists.txt  check_isomorphism.cpp  check_isomorphism.html  debug_and_stats.cpp  debug_and_stats.html  find_automorphisms.cpp  find_automorphisms.html  find_canon_form.cpp  find_canon_form.html  find_canon_order.cpp  g1.dimacs  g2.dimacs  index.html  vertex_labels.cpp  vertex_labels.html
executables/: dimacs.html  download_graph_collections.html  graph_canon.html  graph_canon_bliss.html  graph_canon_dreadnaut.html  graph_canon_run.html  index.html
include/graph_canon/: canonicalization.hpp  compare.hpp  config.hpp  dimacs_graph_io.hpp  ordered_graph.hpp  shorthands.hpp  sorting_utils.hpp  tagged_list.hpp  util.hpp
include/graph_canon/aut/: implicit_size_2.hpp  perm_moved_points.hpp  pruner_base.hpp  pruner_basic.hpp  pruner_schreier.hpp
include/graph_canon/detail/: explicit_automorphism.hpp  fixed_vector.hpp  io.hpp  meta.hpp  partition.hpp  permuted_graph_view.hpp  tree_node.hpp  visitor_utils.hpp
include/graph_canon/edge_handler/: all_equal.hpp  edge_handler.hpp
include/graph_canon/invariant/: cell_split.hpp  coordinator.hpp  partial_leaf.hpp  quotient.hpp  support.hpp
include/graph_canon/refine/: WL_1.hpp  degree_1.hpp  refine.hpp
include/graph_canon/target_cell/: f.hpp  fl.hpp  flm.hpp  flmcr.hpp
include/graph_canon/tree_traversal/: bfs-exp-m.hpp  bfs-exp.hpp  dfs.hpp
include/graph_canon/visitor/: compound.hpp  debug.hpp  stats.hpp  visitor.hpp
lib/pkgconfig/: graph-canon.pc.in
reference/: canonicalization.html  compare.html  config.html  dimacs_graph_io.html  index.html  ordered_graph.html  shorthands.html  sorting_utils.html  tagged_list.html  util.html
reference/aut/: implicit_size_2.html  index.html  perm_moved_points.html  pruner_base.html  pruner_basic.html  pruner_schreier.html
reference/edge_handler/: all_equal.html  edge_handler.html  index.html
reference/invariant/: cell_split.html  coordinator.html  index.html  partial_leaf.html  quotient.html
reference/refine/: WL_1.html  degree_1.html  index.html  refine.html
reference/target_cell/: f.html  fl.html  flm.html  flmcr.html  index.html
reference/tree_traversal/: bfs-exp-m.html  bfs-exp.html  dfs.html  index.html
reference/visitor/: compound.html  debug.html  index.html  stats.html  visitor.html
src/: dimacs.cpp  graph_canon_benchmark.cpp  graph_canon_test.cpp  graph_canon_util.hpp
test/: CMakeLists.txt  graph.hpp  graph_requirements.cpp  ordered_graph.cpp
test/cmake_add_subdirectory/: CMakeLists.txt
test/cmake_add_subdirectory/project/: CMakeLists.txt  main.cpp
test/cmake_import/: CMakeLists.txt
test/cmake_import/project/: CMakeLists.txt
(+6 files in other folders)
